# apps/chimwemwe_core/lib/chimwemwe/public_api/router.ex
@@ -19,6 +19,21 @@ defmodule Chimwemwe.PublicApi.Router do
     plug(Chimwemwe.PublicApi.OriginCsrfPlug)
   end
 
+  pipeline :local_classroom do
+    plug(Chimwemwe.PublicApi.ClassroomPlug)
+  end
+
+  scope "/api/v1/classroom", Chimwemwe.PublicApi do
+    pipe_through [:local_classroom, :authenticated]
+    get("/classes", ClassroomController, :classes, log: false)
+  end
+
+  scope "/api/v1/classroom", Chimwemwe.PublicApi do
+    pipe_through [:local_classroom, :authenticated, :unsafe]
+    post("/prepare-attendance", ClassroomController, :prepare, log: false)
+    post("/submit-attendance", ClassroomController, :submit, log: false)
+  end
+
   scope "/auth", Chimwemwe.PublicApi do
     pipe_through :callback
 
